README.md updated

--- a/ota_update/.vscode/settings.json
+++ b/ota_update/.vscode/settings.json
@@ -14,5 +14,6 @@
     "idf.port": "/dev/ttyUSB0",
     "idf.pythonBinPath": "/home/matqlorens/.espressif/python_env/idf5.2_py3.11_env/bin/python",
     "idf.toolsPath": "/home/matqlorens/.espressif",
-    "idf.flashType": "UART"
+    "idf.flashType": "UART",
+    "cmake.configureOnOpen": false
 }
