Wait for notify implemented

--- a/ota_update/CMakeLists.txt
+++ b/ota_update/CMakeLists.txt
@@ -5,4 +5,5 @@
 cmake_minimum_required(VERSION 3.16)
 
 include($ENV{IDF_PATH}/tools/cmake/project.cmake)
+set(COMPONENT_DIRS ${CMAKE_CURRENT_SOURCE_DIR}/main/components/CANopen)
 project(ota_update)
