--- a/ota_update/.vscode/launch.json
+++ b/ota_update/.vscode/launch.json
@@ -2,6 +2,11 @@
   "version": "0.2.0",
   "configurations": [
     {
+      "name": "ESP-IDF Debug: Launch",
+      "type": "espidf",
+      "request": "launch"
+    },
+    {
       "type": "espidf",
       "name": "Launch",
       "request": "launch"
